--- a/app/src/main/res/layout/activity_ration_algo.xml
+++ b/app/src/main/res/layout/activity_ration_algo.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorAccent"
+    android:background="@color/colorPrimaryDark"
     tools:context=".RationAlgoActivity">
 
     <TextView
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:text="@string/tangential_algorithm"
-        android:textColor="@color/colorPrimaryDark"
+        android:textColor="@color/colorAccent"
         android:textSize="20sp"
         android:textStyle="bold" />
 
@@ -22,7 +22,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/title_0"
         android:text="@string/coor"
-        android:textColor="@color/colorPrimaryDark"
+        android:textColor="@color/colorAccent"
         android:textSize="18sp"
         android:textStyle="italic" />
 
@@ -33,7 +33,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/coordinate_0"
         android:text="@string/time"
-        android:textColor="@color/colorPrimaryDark"
+        android:textColor="@color/colorAccent"
         android:textSize="18sp"
         android:textStyle="italic" />
 
@@ -45,7 +45,7 @@
         android:layout_below="@id/time_used_0"
         android:paddingTop="20dp"
         android:text="@string/cramer_rules_on_circular"
-        android:textColor="@color/colorPrimaryDark"
+        android:textColor="@color/colorAccent"
         android:textSize="20sp"
         android:textStyle="bold" />
 
@@ -55,7 +55,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/title_1"
         android:text="@string/coor"
-        android:textColor="@color/colorPrimaryDark"
+        android:textColor="@color/colorAccent"
         android:textSize="18sp"
         android:textStyle="italic" />
 
@@ -65,7 +65,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/coordinate_1"
         android:text="@string/time"
-        android:textColor="@color/colorPrimaryDark"
+        android:textColor="@color/colorAccent"
         android:textSize="18sp"
         android:textStyle="italic" />
 
@@ -76,7 +76,7 @@
         android:layout_below="@id/time_used_1"
         android:paddingTop="20dp"
         android:text="@string/gaussian_elimination_on_circular"
-        android:textColor="@color/colorPrimaryDark"
+        android:textColor="@color/colorAccent"
         android:textSize="20sp"
         android:textStyle="bold" />
 
@@ -86,7 +86,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/title_2"
         android:text="@string/coor"
-        android:textColor="@color/colorPrimaryDark"
+        android:textColor="@color/colorAccent"
         android:textSize="18sp"
         android:textStyle="italic" />
 
@@ -96,7 +96,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/coordinate_2"
         android:text="@string/time"
-        android:textColor="@color/colorPrimaryDark"
+        android:textColor="@color/colorAccent"
         android:textSize="18sp"
         android:textStyle="italic" />
 
@@ -107,7 +107,7 @@
         android:layout_below="@id/time_used_2"
         android:paddingTop="20dp"
         android:text="@string/center_of_gravity_algorithm"
-        android:textColor="@color/colorPrimaryDark"
+        android:textColor="@color/colorAccent"
         android:textSize="20sp"
         android:textStyle="bold" />
 
@@ -117,7 +117,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/title_3"
         android:text="@string/coor"
-        android:textColor="@color/colorPrimaryDark"
+        android:textColor="@color/colorAccent"
         android:textSize="18sp"
         android:textStyle="italic" />
 
@@ -127,24 +127,48 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/coordinate_3"
         android:text="@string/time"
-        android:textColor="@color/colorPrimaryDark"
+        android:textColor="@color/colorAccent"
         android:textSize="18sp"
         android:textStyle="italic" />
 
+    <EditText
+        android:id="@+id/input_x"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@id/input_y"
+        android:ems="10"
+        android:hint="@string/actual_x"
+        android:inputType="number|numberDecimal"
+        android:textColor="@color/colorAccent"
+        android:textColorHint="@color/colorAccent"
+        android:paddingBottom="10dp" />
+
+    <EditText
+        android:id="@+id/input_y"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
+        android:ems="10"
+        android:hint="@string/actual_y"
+        android:inputType="numberDecimal"
+        android:textColor="@color/colorAccent"
+        android:textColorHint="@color/colorAccent"
+        android:paddingBottom="20dp" />
 
     <Button
         android:id="@+id/refresh"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:background="@color/colorPrimaryDark"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
         android:onClick="onRefreshClicked"
         android:text="@string/refresh"
         android:textAllCaps="false"
-        android:textColor="@color/colorAccent"
-        android:textStyle="bold" />
-
+        android:textStyle="bold"
+        android:padding="10dp"/>
 
 
 
